[package]
name = "ruSTLa"
version = "0.0.1"
authors = ["Santtu Söderholm <santtu.soderholm@tuni.fi>"]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rustla"
path= "src/main.rs"


[dependencies]
regex = "1.4.2"
lazy_static = "1.4.0"
