[package]
name = "ruSTLa"
description = "A reStructuredText → LarST ⊂ LaTeX transpiler."
authors = ["Santtu Söderholm <santtu.soderholm@protonmail.com>"]
version = "0.38.0"
repository= "https://github.com/SeSodesa/rustla"
edition = "2018"
license-file = "LICENSE.rst"
readme = "README.rst"
keywords = ["transpiler", "reStructuredText", "LaTeX"]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rustla"
path= "src/main.rs"

[lib]
name = "rustla"
path = "src/lib.rs"


[dependencies]
regex = "1.4.2"
lazy_static = "1.4.0"
